# cuffs

./: .gitignore  AUTHORS  Bootstrap  For_TA  Makefile.am  Project  README  README.md  acinclude.m4  configure.ac  doxygen.cfg  ideas.org  mkfile
bitfield/: README  README.md  bitfield.h  mkfile
data/: Makefile.am  credits.avi  example.map  map.pgm  maps  player.pgm  rock.pgm
doc/: Makefile  Makefile.am  authors  authors.rst  design.rst  doxygen.txt  doxygroups.txt  news.rst  readme.rst
doc/media/: 15  19  2  20
doc/notes/: ualarm_accuracy
doc/tests/: Generator_Test.doc  Switchbox.odt
doc/tickets/: 118
game/: Makefile.am  Project  README  README.md  client.tcl  fakeserver  mkfile
game/data/: Makefile.am  big.map  constricted.map  credits.avi  empty.map  example.map  example.pgm  maps  obstacles.map  tophat.blend
game/object/: ConnectionManager.hpp  Interpreter.h++  Interpreter.hpp  Map.h++  Map.hpp  Object.hpp  Threaded.hpp  cmb.h++  cmb.hpp  keyListen.h++  keyListen.hpp  keyState.hpp  lib.c  lib.h  macro.h  misc.h++  misc.hpp  physics.h++  physics.hpp  sdl.hpp  state.h++  state.hpp  switchbox.h++  switchbox.hpp  vector.hpp  vectors.hpp
game/object/test/: CMBEvent_tests.cpp  CMBQueue_tests.cpp  Makefile.am
game/src/: Makefile  Makefile.am  README  cat.c++  cat.cpp  credits.sh  delayed-cat.c++  delayed-cat.cpp  dispatcher.cpp  dispatcher2.c++  dispatcher2.cpp  game.cpp  interpret.c++  interpret.cpp  keylisten.cpp  keystate.cpp  map-pgm.cpp  map_parse.py  overworld-client.py  overworld-launcher.py  overworld-server.py  paint_controls.py  paint_window.cpp  physics.cpp  ref.py  render.cpp  repeater.cpp  sb_io.cpp  server.sh  sixty-nine.c  sleep-cat.cpp  state-generator.py  switchbox-cat.c++  switchbox-cat.cpp  switchbox-connect.cpp  switchbox.sh  sync-cat.c++  sync-cat.cpp
game/tests/: README  delayed-cat-in  game-in  interpret-in  physics-in  physics-out  render-in  sleep-cat-out  sync-cat-in  sync-cat-out  tests
game/utils/: run-tests  test
gamefiles/: Makefile.am
gamefiles/battle/: Makefile.am
meta/doc/: doxygroups.txt
meta/media/: 10  11  13  14  16  17  18  3  CMBclientTest.doc
meta/notes/: tickets-extract.lisp  tickets-from-unfuddle
meta/tickets/: 1  10  100  101  102  103  104  105  106  107  108  109  11  110  111  112  113  114  115  116  117  118  119  12  120  121  122  123  13  14  15  16  17  18  19  2  20  21  22  23  (+82 more)
object/: Map.hpp  Object.hpp  keyListen.hpp  vectors.hpp
object/test/: Makefile.am
sdl/: README.md  TODO  comm-test  comm-test.sh  draw.c  draw.h  drawtest.c  ents.tcl  init.tcl  keys.c  keys.h  keytest.c  mkfile  sdlgo.tcl  sdlsh.c  sdlsh.init  sdltcl.c  test.tcl
server/: README.md  server
src/: Makefile  Makefile.am  README  bitfield.i  cat.cpp  client.tcl  delayed-cat.cpp  dispatcher.cpp  dispatcher2.cpp  game.cpp  interpret.cpp  keylisten.cpp  keystate.cpp  lib.tcl  map-pgm.cpp  map_parse.py  map_parse.xotcl  overworld-client.py  overworld-client.tcl  overworld-launcher.py  overworld-launcher.tcl  overworld-server.py  overworld-server.tcl  paint.sh  paint_controls.tcl  paint_window.cpp  physics.cpp  physics.hs  ref.py  ref.tcl  render.cpp  server.sh  sleep-cat.cpp  state-generator.tcl  state.tcl  sync-cat.cpp
src/bitfield/: bitfield.c  bitfield.tcl  bitfield_test.c  mkfile
src/common/: Makefile.am  cbthread.c  cbthread.h
src/game/: Makefile.am
src/game/battle/interpreter/: Interpreter.cpp  Interpreter.hpp  Makefile.am
src/game/battle/synchronizer/: CMBSynchronizer.cpp  Makefile.am  SimpleSynchronizer.cpp  Synchronizer.cpp  Synchronizer.hpp  Syncronizer.hpp
src/sdl/: Makefile  README.md  TODO  draw.c  draw.h  drawtest.c  entloop.tcl  keys.c  keys.h  keytest.c  mkfile  sdl.i  sdl.tcl  sdltcl.c  sdltest.sh  sdltest.tcl  tclloop.c  tclloop.h  vector2.c  vector2.h  vectors.hpp
src/stateGen/: stateGen.cpp  stateGen.hpp
src/state_generator/: stateGen.cpp  stateGen.hpp
src/switchbox/: Connection.cc  Connection.cpp  Connection.h  Connection.hpp  Makefile.am  SwitchboxAdmin.cc  SwitchboxAdmin.cpp  SwitchboxAdmin.h  SwitchboxAdmin.hpp  User.hpp  chat.py  chat_test.cc  chat_test.cpp  client.py  message.c  message.h  reader.py  socket.h  switchbox-cat.py  switchbox.c  switchbox.h  switchbox_client.c  switchbox_client.h  switchbox_client.i  test.c  test.py  writer.py
switchbox/: Connection.cpp  Makefile  Makefile.am  Project  README  README.md  message.c  sixty-nine.c  switchbox-cat.c  switchbox-client-framework.c  switchbox-client.c  switchbox-connect.c  switchbox.c  switchbox.sh  switchbox_client.c  switchbox_client.i  test.c
switchbox/src/: Connection.hpp  Makefile.am  SwitchboxAdmin.cpp  chat_test.cpp  switchbox.c
switchbox/test/: Makefile.am  SBTestCommon.cpp  edgecase_tests.cpp  function_tests.cpp  latency_test.cpp  runtests.py
switchbox/tickets/: 1  2  3  4  5
tests/: Makefile.am  cat-out  game-in  map-pgm-out  sleep-cat-in  sync-cat-out
tests/game/: Makefile.am
tests/game/battle/generator/: Generator_Test.cpp  Makefile.am
tests/game/battle/interpreter/: Interpreter_test.cpp  Makefile.am
tests/game/battle/state/: BattleMap_Test.cpp  Makefile.am  Physics.cpp  test-map-good.pgm  testMap.sh
tests/game/battle/synchronizer/: 1.cmb  1.in  1.in_newcmb  1.newcmb  1.simple  CMBEvent_tests.cpp  CMBQueue_tests.cpp  CMBSynchronizer_Test.cpp  Makefile.am  SimpleSynchronizer_test.cpp  cmb_timestamp_tests.cpp  sync_tests.cpp  synctests.sh
tests/game/common/: CMBclientTest.cpp  CMBgo.sh  CMBsingleTest.cpp  Makefile.am
tests/game/common/copies/: CMBclientTest.cpp
tests/switchbox/: Makefile.am  SBTestCommon.cc  SBTestCommon.cpp  SBTestCommon.h  SBTestCommon.hpp  edgecase_tests.cc  edgecase_tests.cpp  function_tests.cc  function_tests.cpp  latency_test.cc  latency_test.cpp  runtests.py
tests/utils/: ConnectionManager.cpp  ConnectionManager.hpp  Makefile.am  playback.cpp  recorder.cpp  repeater.cpp  sb_io.cpp  switchbox.sh  testMonitor.cpp
utils/: Makefile.am  chat.py  post-email-to-log.sh  post-unfuddle-message.sh  process-mail.py  project-utils  psetup  switchbox-cat.py
(+39 files in other folders)
